# backend-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: app.py  config.py  main.py
api/models/: assignment.py  auth.py  classroom.py  post.py  question.py  quiz.py  user.py  user_id.py  user_profile.py
api/routers/: auth.py  classroom.py  posts.py  question.py  quiz.py  register.py  user.py
api/utils/: current_classroom.py  current_user.py  exceptions.py  password.py
